--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     </noscript>
     <div id="app"></div>
     <div>тестовый текст adawdasdawdawdawd</div>
+    <div>Для проверки работоспособности Git</div>
+    <p>Добавление новых строк</p>
     <!-- built files will be auto injected -->
   </body>
 </html>
