--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <div>тестовый текст adawdasdawdawdawd</div>
     <div>Для проверки работоспособности Git</div>
     <p>Добавление новых строк</p>
+    awdjawkdgjawjhdaw
     <!-- built files will be auto injected -->
   </body>
 </html>
